--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
+[metadata]
+description-file = README.md
+license_file = LICENSE
+
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
 # resulting files.
-
-[metadata]
-description-file = README.md
-
 [versioneer]
 VCS = git
 style = pep440
